[gd_scene load_steps=2 format=3 uid="uid://cq8ft6gw41707"]

[ext_resource type="Script" uid="uid://yldvuvmf14sh" path="res://Entitities/UI/score_ui.gd" id="1_ei5xf"]

[node name="ScoreUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ei5xf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label_1UP" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "1UP"

[node name="Field_Score" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "00"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label_Highscore" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
text = "HIGH SCORE"
horizontal_alignment = 2

[node name="Field_Highscore" type="Label" parent="HBoxContainer/MarginContainer2/VBoxContainer2"]
layout_mode = 2
text = "00"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2/MarginContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Field_Lives" type="Label" parent="HBoxContainer2/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Lives 3"

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer2/MarginContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Fruit" type="Label" parent="HBoxContainer2/MarginContainer3/VBoxContainer2"]
layout_mode = 2
text = "Cherry"
horizontal_alignment = 2
